chore: Update dockerfile #8