@@ -8,4 +8,4 @@ FROM openjdk:11
 
 COPY --from=builder /build/libs/cosmo-backend.jar ./cosmo-backend.jar
 
-CMD ["java", "-jar", "cosmo-backend.jar"]
+CMD ["java", "-server", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-XX:InitialRAMFraction=2", "-XX:MinRAMFraction=2", "-XX:MaxRAMFraction=2", "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=100", "-XX:+UseStringDeduplication", "-jar", "cosmo-backend.jar"]
